load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "service.go",
        "sync.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/subjectivity",
    visibility = ["//visibility:public"],
    deps = ["//shared:go_default_library"],
)
