load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["policies.go"],
    importpath = "github.com/prysmaticlabs/prysm/v2/testing/endtoend/policies",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prysmaticlabs_eth2_types//:go_default_library"],
)
