load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["iface.go"],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/rpc/eth/validator/iface",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/eth/v1:go_default_library",
        "//proto/eth/v2:go_default_library",
    ],
)
